--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-<div class=header>
+<div class="header">
 
 <h1>Logo of the site</h1>
 
@@ -20,7 +20,7 @@ Content block
 Content block
 Content block
 
-<div class=footer>
+<div class="footer footer1">
 
 Footer
 
