added some lines and styles.css

--- a/index.html
+++ b/index.html
@@ -16,9 +16,16 @@
 
 </div>
 
-Content block
-Content block
-Content block
+Content block 1
+Content block 2
+Content block 3
+Content block 4
+
+<div class="content">
+
+<h1>Some content</h1>
+
+</div>
 
 <div class="footer footer1">
 
